# neocrates

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  Makefile  README.md  README.zh-CN.md  USAGE_EXAMPLES.md  publish.sh
.cargo/: config.toml
.zed/: settings.json
awss3/: Cargo.toml
awssts/: Cargo.toml
awssts/src/: lib.rs
crypto/: Cargo.toml
dieselhelper/: Cargo.toml
examples/: README_AXUM_EXTRACTOR.md  README_CAPTCHA.md  README_SMS.md  axum_extractor_example.rs  captcha_example.rs  sms_example.rs
helper/: Cargo.toml
helper/src/core/: json_util.rs  mod.rs  page.rs  text_chunks.rs
logger/: Cargo.toml
middleware/: Cargo.toml
middleware/src/: interceptor.rs  ip.rs  lib.rs  models.rs
neocrates/: Cargo.toml
neocrates/src/: lib.rs
rediscache/: Cargo.toml
response/: Cargo.toml
sms/: Cargo.toml
sms/src/: aliyun.rs  tencent.rs
src/: lib.rs
src/auth/: README.md  auth_helper.rs
src/aws/: README.md  aws_service.rs  mod.rs  sts_service.rs
src/awss3/: README.md  aws.rs
src/awssts/: README.md  aliyun.rs  tencent.rs
src/captcha/: README.md  captcha_service.rs  mod.rs
src/crypto/: README.md  core.rs
src/dieselhelper/: README.md  logging.rs  pool.rs
src/helper/: README.md
src/helper/core/: axum_extractor.rs  engine_pool.rs  enums.rs  hashid.rs  loader.rs  mod.rs  page.rs  regex.rs  retry.rs  serde_helpers.rs  snowflake.rs  tools.rs  utils.rs
src/logger/: README.md  mod.rs
src/middleware/: interceptor.rs  models.rs
src/middlewares/: README.md  interceptor.rs  ip.rs  mod.rs  models.rs  token_store.rs
src/rediscache/: README.md  mod.rs
src/response/: README.md  error.rs
src/sms/: README.md  aliyun.rs  mod.rs  sms_service.rs  tencent.rs
src/sqlxhelper/: README.md  logging.rs  mod.rs  pool.rs
