[package]
name = "neocrates"
version = "0.1.1"
authors = ["hamerkillers@gmail.com"]
edition = "2024"
description = "A comprehensive Rust library for various utilities and helpers"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ooiai/neocrates.git"
readme = "README.md"

[dependencies]
# Core
tokio = { version = "1.44", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
anyhow = "1.0"
thiserror = "2.0"
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
log = "0.4"
env_logger = "0.11"
once_cell = "1.21"
lazy_static = "1.5"
regex = "1"
uuid = { version = "1.18", features = ["v4", "fast-rng"] }
rand = "0.9"
rand_core = { version = "0.9", features = ["std"] }
dashmap = "6.1"
indexmap = "2"
strum = "0.27"
strum_macros = "0.27"
validator = "0.20"
bon = "3.8"

# Web
axum = { version = "0.8", features = ["macros"] }
tower = "0.5"
tower-http = "0.6"
hyper = { version = "1.6", features = ["full"] }
reqwest = { version = "0.12", features = ["gzip", "json"] }
url = "2.5.4"
urlencoding = "2.1.3"

# Database
diesel = { version = "2", features = ["chrono", "serde_json"] }
deadpool = "0.12"
deadpool-diesel = { version = "0.6", features = ["postgres"] }
diesel_migrations = "2"

# Redis
redis = "0.32"
bb8 = "0.9"
bb8-redis = "0.24"
moka = { version = "0.12", features = ["future"] }

# AWS
aws-config = { version = "1.1.7", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1.83.0"
aws-sdk-sts = "1.66.0"
aws-types = "1.3.7"

# Crypto & Utils
openssl = { version = "0.10", features = ["vendored"] }
ring = "0.17.14"
argon2 = "0.5"
hmac = "0.12"
sha2 = "0.10"
base64 = "0.22"
md5 = "0.7"
hex = "0.4"
sha1 = "0.10.6"
crockford = "1.2"
zstd = "0.13"
password-hash = { version = "0.5", features = ["rand_core", "std"] }
percent-encoding = "2.3.1"
flate2 = "1.0"
stream_throttle = "0.5"
async-stream = "0.3"
tempfile = "3"
rayon = "1.10"
image = "0.25"
imageproc = "0.25"
rust_decimal = "1.38"
snowflaker = "0.3"
prometheus = "0.14.0"
schemars = "1"
