[package]
name = "neocrates-awss3"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "AWS S3 helper crate for neocrates workspace"
license = "Apache-2.0"
repository = "https://github.com/ooiai/neocrates.git"
readme = "../README.md"
publish = ["crates-io"]
include = ["src/**", "../README.md", "LICENSE*", "Cargo.toml"]

[dependencies]
# dependencies
aws-config = { workspace = true, features = ["behavior-version-latest"] }
aws-types.workspace = true
aws-sdk-s3.workspace = true

[dev-dependencies]
thiserror.workspace = true
tokio = { workspace = true, features = ["full"] }
