[package]
name = "awssts"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "STS helpers (Aliyun/Tencent) for neocrates workspace"
license = "Apache-2.0"
repository = "https://github.com/ooiai/neocrates.git"
readme = "../README.md"
publish = ["crates-io"]
include = ["src/**", "../README.md", "LICENSE*", "Cargo.toml"]


[dependencies]
# dependencies
reqwest = { workspace = true, features = ["gzip", "json"] }
serde = { workspace = true, features = ["derive"] }
thiserror.workspace = true
serde_json.workspace = true
hmac.workspace = true
sha2.workspace = true
base64.workspace = true
chrono = { workspace = true, features = ["serde"] }
percent-encoding.workspace = true
url.workspace = true
anyhow.workspace = true
uuid = { workspace = true, features = ["v4"] }
hex.workspace = true
sha1.workspace = true
rand.workspace = true
log.workspace = true
env_logger.workspace = true
urlencoding.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
