[package]
name = "crypto"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
description = "Cryptography utilities for the neocrates workspace"
license = "Apache-2.0"
repository = "https://github.com/ooiai/neocrates.git"
readme = "../README.md"
publish = ["crates-io"]
include = ["src/**", "../README.md", "LICENSE*", "Cargo.toml"]


[dependencies]
md5.workspace = true
base64.workspace = true
zstd.workspace = true
hex.workspace = true
argon2.workspace = true
rand.workspace = true
password-hash = { workspace = true, features = ["rand_core"] }
anyhow.workspace = true
tracing.workspace = true

[dev-dependencies]
