[package]
name = "crypto"
version = "0.1.0"
authors.workspace = true
edition = "2024"
description = "Cryptography utilities for the neocrates workspace"
license = "Apache-2.0"
repository = "https://github.com/ooiai/neocrates.git"
readme = "../README.md"
publish = ["crates-io"]
include = ["src/**", "../README.md", "LICENSE*", "Cargo.toml"]


[dependencies]
md5.workspace = true
base64.workspace = true
zstd.workspace = true
hex.workspace = true
argon2.workspace = true
rand.workspace = true
password-hash = { workspace = true, features = ["rand_core"] }
anyhow.workspace = true
tracing.workspace = true

[dev-dependencies]
