[package]
name = "neocrates-dieselhelper"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "Diesel helper utilities for the neocrates workspace"
license = "Apache-2.0"
repository = "https://github.com/ooiai/neocrates.git"
readme = "../README.md"
publish = ["crates-io"]
include = ["src/**", "../README.md", "LICENSE*", "Cargo.toml"]


[dependencies]
# dependencies
thiserror.workspace = true
tokio = { workspace = true, features = ["full"] }
tracing.workspace = true
deadpool.workspace = true
diesel = { workspace = true, features = ["chrono", "serde_json"] }
deadpool-diesel = { workspace = true, features = ["postgres"] }
diesel_migrations.workspace = true

[dev-dependencies]
