[package]
name = "logger"
version = "0.1.0"
authors.workspace = true
edition = "2024"
description = "Logging utilities for neocrates workspace"
license = "Apache-2.0"
repository = "https://github.com/ooiai/neocrates.git"
readme = "../README.md"
publish = ["crates-io"]
include = ["src/**", "../README.md", "LICENSE*", "Cargo.toml"]


[dependencies]
chrono = { workspace = true, features = ["serde"] }
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }

[dev-dependencies]
