[package]
name = "neocrates-logger"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "Logging utilities for neocrates workspace"
license = "Apache-2.0"
repository = "https://github.com/ooiai/neocrates.git"
readme = "../README.md"
publish = ["crates-io"]
include = ["src/**", "../README.md", "LICENSE*", "Cargo.toml"]


[dependencies]
chrono = { workspace = true, features = ["serde"] }
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }

[dev-dependencies]
