[package]
name = "middleware"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
description = "Middleware utilities for the neocrates workspace"
license = "Apache-2.0"
repository = "https://github.com/ooiai/neocrates.git"
readme = "../README.md"
publish = ["crates-io"]
include = ["src/**", "../README.md", "LICENSE*", "Cargo.toml"]

[dependencies]
response.workspace = true
rediscache.workspace = true
helper.workspace = true


axum.workspace = true
tracing.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
chrono.workspace = true
once_cell.workspace = true
dashmap.workspace = true
url.workspace = true
redis.workspace = true
