[package]
name = "neocrates"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
description = "A comprehensive Rust library for various utilities and helpers"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ooiai/neocrates.git"
homepage = "https://github.com/ooiai/neocrates.git"
documentation = "https://docs.rs/neocrates"
readme = "../README.md"
keywords = ["utilities", "helpers", "web", "aws"]
categories = ["web-programming", "asynchronous"]

[dependencies]
# Inherit common dependencies from workspace
axum = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tower = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
log = { workspace = true }
once_cell = { workspace = true }
lazy_static = { workspace = true }
bon = { workspace = true }
regex = { workspace = true }
validator = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_with = { workspace = true }
schemars = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true, features = ["v4", "fast-rng"] }
url = { workspace = true }
urlencoding = { workspace = true }
rand = { workspace = true }
async-trait = { workspace = true }
dashmap = { workspace = true }
indexmap = { workspace = true }
quick-xml = { workspace = true }
lru = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
image = { workspace = true }
imageproc = { workspace = true }
rust_decimal = { workspace = true }
snowflaker = { workspace = true }
prometheus = { workspace = true }
hyper = { workspace = true, features = ["full"] }
reqwest = { workspace = true }
crockford = { workspace = true }
rayon = { workspace = true }
zstd = { workspace = true }
flate2 = { workspace = true }
stream_throttle = { workspace = true }
async-stream = { workspace = true }
tempfile = { workspace = true }

# Optional feature dependencies (now using workspace inheritance)
# AWS dependencies (optional)
aws-config = { workspace = true, optional = true }
aws-sdk-s3 = { workspace = true, optional = true }
aws-sdk-sts = { workspace = true, optional = true }
aws-types = { workspace = true, optional = true }

# Database dependencies (optional)
deadpool = { workspace = true, optional = true }
diesel = { workspace = true, optional = true }
deadpool-diesel = { workspace = true, optional = true }
diesel_migrations = { workspace = true, optional = true }

# Redis dependencies (optional)
redis = { workspace = true, optional = true }
bb8 = { workspace = true, optional = true }
bb8-redis = { workspace = true, optional = true }
moka = { workspace = true, optional = true }

# Crypto dependencies (optional)
openssl = { workspace = true, optional = true }
ring = { workspace = true, optional = true }
argon2 = { workspace = true, optional = true }
hmac = { workspace = true, optional = true }
sha2 = { workspace = true, optional = true }

[features]
default = []
aws = ["dep:aws-config", "dep:aws-sdk-s3", "dep:aws-sdk-sts", "dep:aws-types"]
database = ["dep:deadpool", "dep:diesel", "dep:deadpool-diesel", "dep:diesel_migrations"]
redis = ["dep:redis", "dep:bb8", "dep:bb8-redis", "dep:moka"]
crypto = ["dep:openssl", "dep:ring", "dep:argon2", "dep:hmac", "dep:sha2"]
full = ["aws", "database", "redis", "crypto"]
