[package]
name = "neocrates"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "A comprehensive Rust library for various utilities and helpers"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ooiai/neocrates.git"
homepage = "https://github.com/ooiai/neocrates.git"
documentation = "https://docs.rs/neocrates"
readme = "../README.md"
keywords = ["utilities", "helpers", "web", "aws"]
categories = ["web-programming", "asynchronous"]

[dependencies]

logger = { workspace = true}
helper = { workspace = true }
response = { workspace = true }
rediscache = { workspace = true }
awssts = { workspace = true }
awss3 = { workspace = true }
crypto = { workspace = true }
dieselhelper = { workspace = true }
middleware = { workspace = true }
sms = { workspace = true }


# Inherit common dependencies from workspace
axum = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tower = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
log = { workspace = true }
once_cell = { workspace = true }
lazy_static = { workspace = true }
bon = { workspace = true }
regex = { workspace = true }
validator = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_with = { workspace = true }
schemars = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
uuid = { workspace = true, features = ["v4", "fast-rng"] }
url = { workspace = true }
urlencoding = { workspace = true }
rand = { workspace = true }
async-trait = { workspace = true }
dashmap = { workspace = true }
indexmap = { workspace = true }
quick-xml = { workspace = true }
lru = { workspace = true }
strum = { workspace = true }
strum_macros = { workspace = true }
image = { workspace = true }
imageproc = { workspace = true }
rust_decimal = { workspace = true }
snowflaker = { workspace = true }
prometheus = { workspace = true }
hyper = { workspace = true, features = ["full"] }
reqwest = { workspace = true, features = ["gzip", "json"] }
crockford = { workspace = true }
rayon = { workspace = true }
zstd = { workspace = true }
flate2 = { workspace = true }
stream_throttle = { workspace = true }
async-stream = { workspace = true }
tempfile = { workspace = true }
password-hash = { workspace = true, features = ["rand_core"] }
rand_core = { workspace = true, features = ["std"] }
openssl = { workspace = true, features = ["vendored"] }


# Optional feature dependencies (now using workspace inheritance)
# AWS dependencies (optional)
aws-config = { workspace = true, features = ["behavior-version-latest"] }
aws-sdk-s3 = { workspace = true }
aws-sdk-sts = { workspace = true }
aws-types = { workspace = true }

# Database dependencies (optional)
deadpool = { workspace = true }
diesel = { workspace = true, features = ["chrono", "serde_json"] }
deadpool-diesel = { workspace = true, features = ["postgres"] }
diesel_migrations = { workspace = true }

# Redis dependencies (optional)
redis = { workspace = true }
bb8 = { workspace = true }
bb8-redis = { workspace = true }
moka = { workspace = true }

# Crypto dependencies (optional)
ring = { workspace = true }
argon2 = { workspace = true }
hmac = { workspace = true }
sha2 = { workspace = true }
base64 = { workspace = true }

# [features]
# default = []
# aws = ["dep:aws-config", "dep:aws-sdk-s3", "dep:aws-sdk-sts", "dep:aws-types"]
# database = ["dep:deadpool", "dep:diesel", "dep:deadpool-diesel", "dep:diesel_migrations"]
# redis = ["dep:redis", "dep:bb8", "dep:bb8-redis", "dep:moka"]
# crypto = ["dep:openssl", "dep:ring", "dep:argon2", "dep:hmac", "dep:sha2"]
# full = ["aws", "database", "redis", "crypto"]
