[package]
name = "response"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "Response utilities and Axum integrations for the neocrates workspace"
license = "Apache-2.0"
repository = "https://github.com/ooiai/neocrates.git"
readme = "../README.md"
publish = ["crates-io"]
include = ["src/**", "../README.md", "LICENSE*", "Cargo.toml"]

[dependencies]
axum = { workspace = true, features = ["macros"] }
tracing.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
validator.workspace = true
diesel.workspace = true
deadpool-diesel.workspace = true
