[package]
name = "neocrates-sms"
version.workspace = true
authors.workspace = true
edition.workspace = true
description = "SMS utilities for the neocrates workspace"
license = "Apache-2.0"
repository = "https://github.com/ooiai/neocrates.git"
readme = "../README.md"
publish = ["crates-io"]
include = ["src/**", "../README.md", "LICENSE*", "Cargo.toml"]


[dependencies]
reqwest = { workspace = true, features = ["gzip", "json"] }
serde = { workspace = true, features = ["derive"] }
thiserror.workspace = true
serde_json.workspace = true
base64.workspace = true
chrono.workspace = true
anyhow.workspace = true
rand.workspace = true
ring.workspace = true
urlencoding.workspace = true
sha2.workspace = true
hmac.workspace = true
hex.workspace = true
url.workspace = true
sha1.workspace = true
uuid.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
